--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,15 +18,12 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
     "@prisma/client": "^5.22.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.1",
-    "eslint": "^9.15.0",
     "globals": "^15.12.0",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.15.0",
     "vitest": "^2.1.5"
   }
 }
