--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:watch": "tsx watch src/server.ts"
+    "dev:watch": "tsx watch src/server.ts",
+    "seed": "npx prisma migrate dev"
   },
   "keywords": [],
   "author": "",
@@ -23,8 +24,11 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.1",
     "globals": "^15.12.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "vitest": "^2.1.5"
-  }
+  },
+  "prisma": { "seed": "tsx prisma/seed.ts" }
+  
 }
