--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.4.0",
     "@googlemaps/routing": "^1.3.0",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "express": "^4.19.2",
+    "google-auth-library": "^9.15.0",
     "prisma": "^5.22.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@prisma/client": "^5.22.0",
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.21",
+    "@types/googlemaps": "^3.43.3",
     "@types/node": "^22.9.1",
     "globals": "^15.12.0",
     "ts-node": "^10.9.2",
@@ -29,6 +32,7 @@
     "typescript": "^5.6.3",
     "vitest": "^2.1.5"
   },
-  "prisma": { "seed": "tsx prisma/seed.ts" }
-  
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  }
 }
