--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express": "^4.19.2",
     "google-auth-library": "^9.15.0",
     "prisma": "^5.22.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -27,6 +29,8 @@
     "@types/express": "^4.17.21",
     "@types/googlemaps": "^3.43.3",
     "@types/node": "^22.9.1",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.7",
     "globals": "^15.12.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
