--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "@googlemaps/routing": "^1.3.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "google-auth-library": "^9.15.0",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@prisma/client": "^5.22.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/googlemaps": "^3.43.3",
     "@types/node": "^22.9.1",
