--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "vitest run",
     "coverage": "vitest run --coverage",
     "dev:watch": "tsx watch src/server.ts",
-    "seed": "npx prisma migrate dev"
+    "dev": "tsx src/server.ts",
+    "seed": "tsx prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
